[project]
name = "gpc-image-classification"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.4.0",
    "pillow>=12.0.0",
    "plotly>=6.5.0",
    "pygpc>=0.4.4",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "tqdm>=4.67.1",
]
